<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_add_entry_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/api"
            android:inputType="textCapSentences"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:paddingHorizontal="@dimen/padding_10" />

        <EditText
            android:id="@+id/et_add_entry_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:paddingHorizontal="@dimen/padding_10" />

        <EditText
            android:id="@+id/et_add_entry_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:paddingHorizontal="@dimen/padding_10" />

        <EditText
            android:id="@+id/et_add_entry_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:paddingHorizontal="@dimen/padding_10" />
    </LinearLayout>
</layout>
